force-app/main/default/objects/Sales_Order__c/fields/Margin_Ref_SO_eDrive_Materials__c.field-meta.xml
<CustomField>
    <fullName>Margin_Ref_SO_eDrive_Materials__c</fullName>
    <formula>Margin_Reference_Sales_Order__r.Margin_Actual_eDrive_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Ref SO eDrive Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>