force-app/main/default/objects/Sales_Order__c/fields/Margin_Ref_SO_PPI_Percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_Ref_SO_PPI_Percent__c</fullName>
    <formula>Margin_Reference_Sales_Order__r.Purchase_Price_Index_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Ref SO PPI Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>