force-app/main/default/objects/Sales_Order__c/fields/Margin_Ref_SO_Standard_Materials__c.field-meta.xml
<CustomField>
    <fullName>Margin_Ref_SO_Standard_Materials__c</fullName>
    <formula>Margin_Ref_SO_Base_Materials__c +  Margin_Ref_SO_eDrive_Materials__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Ref SO Standard Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>