force-app/main/default/objects/Sales_Order__c/fields/Margin_Ref_SO_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Margin_Ref_SO_Start_Date__c</fullName>
    <formula>Margin_Reference_Sales_Order__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Ref SO Start Date</label>
    <type>Date</type>
</CustomField>