force-app/main/default/objects/Sales_Order__c/fields/Margin_Sold_Year__c.field-meta.xml
<CustomField>
    <fullName>Margin_Sold_Year__c</fullName>
    <formula>value( Margin_Reference_Sales_Order__r.Margin_Assumption__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Sold Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>