force-app/main/default/objects/Sales_Order__c/fields/Margin_Std_Materials__c.field-meta.xml
<CustomField>
    <fullName>Margin_Std_Materials__c</fullName>
    <formula>Margin_Base_Materials__c +  Margin_eDrive_Materials__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Std Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>