force-app/main/default/objects/Sales_Order__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CNG</fullName>
                <color>#CC6600</color>
                <label>CNG</label>
            </value>
            <value>
                <fullName>Diesel</fullName>
                <color>#3333FF</color>
                <label>Diesel</label>
            </value>
            <value>
                <fullName>Electric</fullName>
                <color>#6600CC</color>
                <label>Electric</label>
            </value>
            <value>
                <fullName>Allison Hybrid</fullName>
                <color>#CC9933</color>
                <label>Allison Hybrid</label>
            </value>
            <value>
                <fullName>BAE Hybrid</fullName>
                <color>#009900</color>
                <label>BAE Hybrid</label>
            </value>
            <value>
                <fullName>Trolley (Overhead)</fullName>
                <color>#FF0000</color>
                <label>Trolley (Overhead)</label>
            </value>
            <value>
                <fullName>Glider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>