force-app/main/default/objects/Sales_Order__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <formula>text(Letter_Code__c) +   


If(ispickval( Mode__c ,&quot;Electric&quot;),&quot;28&quot;, 


CASE(  Engine__c  , &quot;Cummins ISL/L9 8.9 Liter&quot;, &quot;27&quot;, &quot;Cummins L9 8.9 Liter&quot;, &quot;27&quot;,&quot;Cummins ISL 8.3 Liter&quot;,&quot;27&quot;,


 &quot;Cummins ISL-G&quot;, &quot;31&quot;, &quot;Cummins L9N 8.9 Liter&quot;, &quot;31&quot;, &quot;Cummins ISL-G Near Zero 8.9 Liter&quot;,&quot;31&quot;,&quot;Cummins ISL-G 8.9 Liter&quot;,&quot;31&quot;, &quot;Cummins ISL G / ISLG Near Zero / ISLG NZ 8.9 Liter&quot;,&quot;31&quot;,


&quot;Cummins ISB&quot;,&quot;30&quot;,&quot;Cummins B6.7 6.7 Liter&quot;,&quot;30&quot;,




&quot;Cummins ISM&quot;,&quot;21&quot;,

&quot;Electric&quot;, &quot;28&quot;,&quot;TBD&quot;))


 + CASE(Length__c, &quot;30&quot;,&quot;A&quot;,&quot;35&quot;,&quot;B&quot;,&quot;40&quot;,&quot;D&quot;,&quot;29&quot;,&quot;E&quot;,&quot;TBD&quot;)

+  text( Width__c)
+  text(Rear_Suspension__c)</formula>
    <label>Model</label>
    <type>Text</type>
</CustomField>