force-app/main/default/objects/Sales_Order__c/fields/Model_Id__c.field-meta.xml
<CustomField>
    <fullName>Model_Id__c</fullName>
    <description>Model Id calculated by using Metadata.</description>
    <label>Model_Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>