force-app/main/default/objects/Sales_Order__c/fields/New_Contract__c.field-meta.xml
<CustomField>
    <fullName>New_Contract__c</fullName>
    <label>New Contract - Delivery Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>