force-app/main/default/objects/Sales_Order__c/fields/New_Contract_Base_Materials__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Base_Materials__c</fullName>
    <formula>New_Contract_Materials_Non_Quoted__c + New_Contract_Materials__c + New_Contract_Manual_Cost_Adjustment__c + New_Contract_Mode_Adder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Contract - Base Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>