force-app/main/default/objects/Sales_Order__c/fields/New_Contract_Build_Year__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Build_Year__c</fullName>
    <label>New Contract Build Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>