force-app/main/default/objects/Sales_Order__c/fields/New_Contract_Delivery_Incidentals__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Delivery_Incidentals__c</fullName>
    <label>New Contract - Delivery Incidentals</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>