force-app/main/default/objects/Sales_Order__c/fields/New_Contract_eDrive_Materials__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_eDrive_Materials__c</fullName>
    <label>New Contract - eDrive Materials</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>