force-app/main/default/objects/Sales_Order__c/fields/New_Contract_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Gross_Margin__c</fullName>
    <formula>New_Contract_Revenue__c  -  New_Contract_Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Contract - Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>