force-app/main/default/objects/Sales_Order__c/fields/New_Contract_Int_Std_Warranty__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Int_Std_Warranty__c</fullName>
    <label>New Contract - Int Std Warranty</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>