force-app/main/default/objects/Sales_Order__c/fields/New_Contract_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Labor_Cost__c</fullName>
    <formula>New_Contract_Labor_Hours__c *  New_Contract_Labor_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Contract - Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>