force-app/main/default/objects/Sales_Order__c/fields/New_Contract_Labor_Rate__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Labor_Rate__c</fullName>
    <label>New Contract - Labor Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>