force-app/main/default/objects/Sales_Order__c/fields/New_Contract_Manual_Cost_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Manual_Cost_Adjustment__c</fullName>
    <label>New Contract - Manual Cost Adjustment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>