force-app/main/default/objects/Sales_Order__c/fields/New_Contract_Materials_Non_Quoted__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Materials_Non_Quoted__c</fullName>
    <label>New Contract - Materials - Non Quoted</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>