force-app/main/default/objects/Sales_Order__c/fields/New_Contract_Mode_Adder__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Mode_Adder__c</fullName>
    <label>New Contract - Mode Adder</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>