force-app/main/default/objects/Sales_Order__c/fields/New_Contract_Other_COS_Allocation__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Other_COS_Allocation__c</fullName>
    <label>New Contract - Other COS Allocation</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>