force-app/main/default/objects/Sales_Order__c/fields/New_Contract_Standard_Materials__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Standard_Materials__c</fullName>
    <formula>New_Contract_Base_Materials__c +  New_Contract_eDrive_Materials__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Contract - Standard Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>