force-app/main/default/objects/Sales_Order__c/fields/New_Contract_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Total_Cost__c</fullName>
    <formula>New_Contract_Standard_Materials__c + New_Contract_Overhead__c + New_Contract_Labor_Cost__c + New_Contract_Int_Std_Warranty__c + New_Contract_Ext_Pur_Warranty__c +  New_Contract_Total_Delivery_Cost__c  + New_Contract_Other_COS_Allocation__c + New_Contract_Outside_Processes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Contract - Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>