force-app/main/default/objects/Sales_Order__c/fields/New_Contract_Total_Delivery_Cost__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Total_Delivery_Cost__c</fullName>
    <formula>(New_Contract_Delivery_Miles__c *  New_Contract__c ) +  New_Contract_Delivery_Incidentals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Contract - Total Delivery Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>