force-app/main/default/objects/Sales_Order__c/fields/New_Customer__c.field-meta.xml
<CustomField>
    <fullName>New_Customer__c</fullName>
    <formula>if(  ISPICKVAL( Opportunity__r.Type ,&quot;New Business&quot;),True,False)</formula>
    <label>New Customer</label>
    <type>Checkbox</type>
</CustomField>