force-app/main/default/objects/Sales_Order__c/fields/No_USB_Required__c.field-meta.xml
<CustomField>
    <fullName>No_USB_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manuals USB Not Required</label>
    <type>Checkbox</type>
</CustomField>