force-app/main/default/objects/Sales_Order__c/fields/Options_Value__c.field-meta.xml
<CustomField>
    <fullName>Options_Value__c</fullName>
    <formula>Current_Net_Revenue__c -  Purchase_Price_Index_Value__c -  Margin_Ref_SO_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Options Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>