force-app/main/default/objects/Sales_Order__c/fields/Order_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Order_Loaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate whether the PSM has loaded the order in Buy Design</description>
    <label>Order Loaded</label>
    <type>Checkbox</type>
</CustomField>