force-app/main/default/objects/Sales_Order__c/fields/Order_Processing_Hours__c.field-meta.xml
<CustomField>
    <fullName>Order_Processing_Hours__c</fullName>
    <inlineHelpText>The order processing hours to be entered by the Sales department.</inlineHelpText>
    <label>Order Processing Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>