force-app/main/default/objects/Sales_Order__c/fields/Order_Processing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Order_Processing_Notes__c</fullName>
    <label>Order Processing Notes</label>
    <type>TextArea</type>
</CustomField>