force-app/main/default/objects/Sales_Order__c/fields/Order_Processor__c.field-meta.xml
<CustomField>
    <fullName>Order_Processor__c</fullName>
    <label>Order Processor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BOM_Processors</valueSetName>
    </valueSet>
</CustomField>