force-app/main/default/objects/Sales_Order__c/fields/Overhead__c.field-meta.xml
<CustomField>
    <fullName>Overhead__c</fullName>
    <formula>Margin_Assumption__r.Overhead__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overhead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>