force-app/main/default/objects/Sales_Order__c/fields/Paint_Layout__c.field-meta.xml
<CustomField>
    <fullName>Paint_Layout__c</fullName>
    <label>Paint Layout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paint Package Released</fullName>
            </value>
            <value>
                <fullName>Corporate Identity Processing</fullName>
            </value>
            <value>
                <fullName>Customer Reviewing</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>