force-app/main/default/objects/Sales_Order__c/fields/Paint_Passes__c.field-meta.xml
<CustomField>
    <fullName>Paint_Passes__c</fullName>
    <description>Number of Paint Passes</description>
    <label>Paint Passes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>