force-app/main/default/objects/Sales_Order__c/fields/Paint_Samples__c.field-meta.xml
<CustomField>
    <fullName>Paint_Samples__c</fullName>
    <label>Paint Samples</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent to Customer</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>