force-app/main/default/objects/Sales_Order__c/fields/Part_Manuals_Revised_Records__c.field-meta.xml
<CustomField>
    <fullName>Part_Manuals_Revised_Records__c</fullName>
    <label>Parts Optim Reviewed Pages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>