force-app/main/default/objects/Sales_Order__c/fields/Parts_Assy_Finished__c.field-meta.xml
<CustomField>
    <fullName>Parts_Assy_Finished__c</fullName>
    <label>Parts Assy Pulled</label>
    <type>Date</type>
</CustomField>