force-app/main/default/objects/Sales_Order__c/fields/Parts_Assy_Hours__c.field-meta.xml
<CustomField>
    <fullName>Parts_Assy_Hours__c</fullName>
    <label>Parts Assy Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>