force-app/main/default/objects/Sales_Order__c/fields/Parts_Assy_Person__c.field-meta.xml
<CustomField>
    <fullName>Parts_Assy_Person__c</fullName>
    <label>Parts Assy Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Publications_Order_Processors</valueSetName>
    </valueSet>
</CustomField>