force-app/main/default/objects/Sales_Order__c/fields/Parts_Dash_Done__c.field-meta.xml
<CustomField>
    <fullName>Parts_Dash_Done__c</fullName>
    <label>Parts Dash Date</label>
    <type>Date</type>
</CustomField>