force-app/main/default/objects/Sales_Order__c/fields/Parts_Dash_Hours__c.field-meta.xml
<CustomField>
    <fullName>Parts_Dash_Hours__c</fullName>
    <label>Parts Dash Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>