force-app/main/default/objects/Sales_Order__c/fields/Parts_Days_Other__c.field-meta.xml
<CustomField>
    <fullName>Parts_Days_Other__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Time spent helping primary manual creator.</inlineHelpText>
    <label>Parts Days Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>