force-app/main/default/objects/Sales_Order__c/fields/Parts_Days_Total__c.field-meta.xml
<CustomField>
    <fullName>Parts_Days_Total__c</fullName>
    <formula>( ( Parts_Assy_Hours__c + Parts_Dash_Hours__c +  Parts_Manual_Optimizing_Hours__c  +  Parts_PDF_Hours__c   ) / 8 )  +  Parts_Manual_Active_Days__c  + Parts_Days_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parts Days Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>