force-app/main/default/objects/Sales_Order__c/fields/Parts_File_List__c.field-meta.xml
<CustomField>
    <fullName>Parts_File_List__c</fullName>
    <label>Parts File List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>