force-app/main/default/objects/Sales_Order__c/fields/Parts_Manual_Added_Records__c.field-meta.xml
<CustomField>
    <fullName>Parts_Manual_Added_Records__c</fullName>
    <label>Parts Manual Added Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>