force-app/main/default/objects/Sales_Order__c/fields/Parts_Manual_Created_Spreads__c.field-meta.xml
<CustomField>
    <fullName>Parts_Manual_Created_Spreads__c</fullName>
    <label>Parts Spreads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>