force-app/main/default/objects/Sales_Order__c/fields/Parts_Manual_Days_Late__c.field-meta.xml
<CustomField>
    <fullName>Parts_Manual_Days_Late__c</fullName>
    <formula>If(  ISBLANK( Parts_Manual_Completion_Date__c ),null,

if( Parts_Manual_Completion_Date__c -  Parts_Manual_Ship_Due_Date__c  &lt;0,0, Parts_Manual_Completion_Date__c -  Parts_Manual_Ship_Due_Date__c  ))</formula>
    <label>Parts Days Late</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>