force-app/main/default/objects/Sales_Order__c/fields/Parts_Manual_Deviation_Days__c.field-meta.xml
<CustomField>
    <fullName>Parts_Manual_Deviation_Days__c</fullName>
    <formula>Pubs_oBOM_Target__r.Manual_Deviation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parts Manual Deviation Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>