force-app/main/default/objects/Sales_Order__c/fields/Parts_Manual_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Parts_Manual_Due_Date__c</fullName>
    <formula>CASE( 
MOD( Start_Date__c - DATE(1900, 1, 7), 7), 
0, (Start_Date__c ) + 30 + FLOOR((30-1)/5)*2, 
1, (Start_Date__c ) + 30 + FLOOR((30)/5)*2, 
2, (Start_Date__c ) + 30 + FLOOR((30+1)/5)*2, 
3, (Start_Date__c ) + 30 + FLOOR((30+2)/5)*2, 
4, (Start_Date__c ) + 30 + FLOOR((30+3)/5)*2, 
5, (Start_Date__c ) + 30 + CEILING((30)/5)*2, 
6, (Start_Date__c ) - IF(30&gt;0,1,0) + 30 + CEILING((30)/5)*2, 
null)</formula>
    <label>Parts Manual Due Date</label>
    <type>Date</type>
</CustomField>