force-app/main/default/objects/Sales_Order__c/fields/Parts_Manual_Hard_Copy_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Parts_Manual_Hard_Copy_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts Manual Hard Copy Not Required</label>
    <type>Checkbox</type>
</CustomField>