force-app/main/default/objects/Sales_Order__c/fields/Parts_Manual_Identical_To__c.field-meta.xml
<CustomField>
    <fullName>Parts_Manual_Identical_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>When a VIN is entered in this field, this manual for this SO will be hidden from the Pubs schedule and backlog because it is being combined with another SO. NOTE: applies only to this manual type within this SO. If only other manuals for an SO will be combined, the other &quot;XX Manual Identical To&quot; fields will be used. If all manuals for this SO will be combined with another SO, this field will be blank and &quot;Manuals Identical To&quot; above will be used instead.</inlineHelpText>
    <label>Parts Manual ID To</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Sales Orders (Parts Manual Identical To)</relationshipLabel>
    <relationshipName>Sales_Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>