force-app/main/default/objects/Sales_Order__c/fields/Parts_Manual_Notes__c.field-meta.xml
<CustomField>
    <fullName>Parts_Manual_Notes__c</fullName>
    <label>Parts Notes</label>
    <type>TextArea</type>
</CustomField>