force-app/main/default/objects/Sales_Order__c/fields/Parts_Manual_oBOM_Bills__c.field-meta.xml
<CustomField>
    <fullName>Parts_Manual_oBOM_Bills__c</fullName>
    <label>Parts oBOM Bills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>