force-app/main/default/objects/Sales_Order__c/fields/Parts_Manual_Optimized_Date__c.field-meta.xml
<CustomField>
    <fullName>Parts_Manual_Optimized_Date__c</fullName>
    <label>Parts Manual Optimized Date</label>
    <type>Date</type>
</CustomField>