force-app/main/default/objects/Sales_Order__c/fields/Parts_Manual_Processing_Days__c.field-meta.xml
<CustomField>
    <fullName>Parts_Manual_Processing_Days__c</fullName>
    <formula>if(isblank( Parts_Manual_Completion_Date__c ),null,  


CASE(MOD( Parts_Manual_Start_Date__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( Parts_Manual_Completion_Date__c - Parts_Manual_Start_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Parts_Manual_Completion_Date__c - Parts_Manual_Start_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Parts_Manual_Completion_Date__c - Parts_Manual_Start_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Parts_Manual_Completion_Date__c - Parts_Manual_Start_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Parts_Manual_Completion_Date__c - Parts_Manual_Start_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Parts_Manual_Completion_Date__c - Parts_Manual_Start_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Parts_Manual_Completion_Date__c - Parts_Manual_Start_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Parts_Manual_Completion_Date__c- Parts_Manual_Start_Date__c )/7)*5))</formula>
    <label>Parts Manual Processing Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>