force-app/main/default/objects/Sales_Order__c/fields/Parts_Manual_Processing_Hours__c.field-meta.xml
<CustomField>
    <fullName>Parts_Manual_Processing_Hours__c</fullName>
    <label>Parts Manual Processing Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>