force-app/main/default/objects/Sales_Order__c/fields/Parts_Manual_Processor__c.field-meta.xml
<CustomField>
    <fullName>Parts_Manual_Processor__c</fullName>
    <label>Parts Pages Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Publications_Order_Processors</valueSetName>
    </valueSet>
</CustomField>