force-app/main/default/objects/Sales_Order__c/fields/Parts_Manual_Ship_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Parts_Manual_Ship_Due_Date__c</fullName>
    <description>Parts manuals due date based on actual first ship bus of the sales order.</description>
    <label>Manuals Due Parts</label>
    <type>Date</type>
</CustomField>